# AETERNA

./: .gitignore  AETERNA_AGENT_ROLES.md  AETERNA_COMPREHENSIVE_AGENT_ANALYSIS.md  AETERNA_MASTER_ORCHESTRATOR.md  AETERNA_STRATEGIC_MASTERPLAN.md  CLAUDE.md  CONSTITUTION_v2.md  CONSTITUTION_v3.md  PROJECT_OVERVIEW.md  heartbeat.py  imperial_status_report.json  imperial_status_report.md  requirements.txt  todo.md
AETERNA_EMPIRE/: emperor_agent.py  quick_empire_starter.py  strategic_command_center.py
agents/: __init__.py  analyzer.py  builder.py  commerce_agent.py  evolver.py  growth_agent.py  improver.py  product_agent.py  self_modifier.py  seller.py
archive/electronics/project_electronics/project_gear_master/: .env.example  README.md  pyproject.toml
archive/electronics/project_electronics/project_gear_master/config/: config.yml
archive/electronics/project_electronics/project_gear_master/data/: post_mapping.json
archive/electronics/project_electronics/project_gear_master/src/analyst/: __init__.py  performance_report.py
archive/electronics/project_electronics/project_gear_master/src/orchestrator/: __init__.py
archive/electronics/project_electronics/project_gear_master/src/publisher/: __init__.py  automation.py
archive/electronics/project_electronics/project_gear_master/templates/: article.md.j2  main.yml
core/: __init__.py  brain.py  llm_client.py  memory.py  notifier.py  revenue_scanner.py  state_manager.py
data/: state.json
gumroad.auto/: .env.example  GITHUB_SETUP.md  GLOBAL_MARKET_STRATEGY.md  GUMROAD_AGENT_ORGANIZATION.md  GUMROAD_PROJECT_PLAN.md  (+35 more)
(+1522 files in other folders)
