[project]
name = "project-gear-master"
version = "0.2.0"
description = "Electronics-only autonomous affiliate organization flow with WordPress integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.3",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
gear-master = "orchestrator.cli:main"
gear-wp = "publisher.wp_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/researcher",
  "src/publisher",
  "src/analyst",
  "src/orchestrator",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
